--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,6 +3,6 @@ html
 	meta(charset="utf-8")
 	title #{title}
 	include includes/head
-body
+body(style="padding-bottom:60px;")
 	include includes/header
 	block content
